Add columns (ChartPage, Oblique, Horizon*)

--- a/w3/index.html
+++ b/w3/index.html
@@ -8,7 +8,7 @@
 	<script type="text/javascript">
 		function start() {
 			// set to Charta Caeli root element
-			var xml = "<?xml version='1.0' encoding='UTF-8'?><ChartaCaeli xmlns='http://www.chartacaeli.eu/chartacaeli/model' xmlns:xsi='http://www.w3.org/2001/XMLSchema-instance' xsi:schemaLocation='http://www.chartacaeli.eu/chartacaeli/model C:\\Users\\jschuck\\src\\chartacaeli\\chartacaeli.xsd'/>";
+			var xml = "<?xml version='1.0' encoding='UTF-8'?><ChartaCaeli xmlns='http://www.chartacaeli.eu/chartacaeli/model' xmlns:xsi='http://www.w3.org/2001/XMLSchema-instance' xsi:schemaLocation='http://www.chartacaeli.eu/chartacaeli/model chartacaeli.xsd'/>";
 			var editor=document.getElementById("editor");
 			Xonomy.setMode("laic");
 			Xonomy.render(xml, editor, docSpec);
