--- a/w3/index.html
+++ b/w3/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-	<script type="text/javascript" src="lib/xonomy-3.5.0/xonomy.js"></script>
+	<script type="text/javascript" src="lib/xonomy/xonomy.js"></script>
 	<script type="text/javascript" src="lib/chartacaeli.xsd.js"></script>
-	<link type="text/css" rel="stylesheet" href="lib/xonomy-3.5.0/xonomy.css"/>
+	<link type="text/css" rel="stylesheet" href="lib/xonomy/xonomy.css"/>
 	<script type="text/javascript">
 		function start() {
 			// set to Charta Caeli root element
