Add missing elements

--- a/w3/index.html
+++ b/w3/index.html
@@ -7,11 +7,9 @@
 	<link type="text/css" rel="stylesheet" href="lib/xonomy/xonomy.css"/>
 	<script type="text/javascript">
 		function start() {
-			// set to Charta Caeli root element
-			var xml = "<?xml version='1.0' encoding='UTF-8'?><ChartaCaeli xmlns='http://www.chartacaeli.eu/chartacaeli/model' xmlns:xsi='http://www.w3.org/2001/XMLSchema-instance' xsi:schemaLocation='http://www.chartacaeli.eu/chartacaeli/model chartacaeli.xsd'/>";
 			var editor=document.getElementById("editor");
 			Xonomy.setMode("laic");
-			Xonomy.render(xml, editor, docSpec);
+			Xonomy.render(xmlInit, editor, docSpec);
 		}
 	</script>
 </head>
