Reduce image count

--- a/w3/index.html
+++ b/w3/index.html
@@ -74,34 +74,34 @@
 			<div id="ccGalleryCarousel" class="carousel slide" data-ride="carousel">
 				<div class="carousel-inner">
 					<div class="carousel-item" data-view="general-features-selection.pdf" data-info="ccInfoGen" data-edit="general-features-selection.xml, general-features-selection.preferences">
-						<img class="d-block w-100" src="general-features-selectionCRP.png" alt="General features selection">
 						<div class="carousel-caption d-none d-md-block">
 							<h3>General features selection</h3>
 						</div>
+						<img class="d-block w-100" src="general-features-selection.png" alt="General features selection">
 					</div>
 					<div class="carousel-item active" data-view="scientific-star-chart.pdf" data-info="ccInfoSci" data-edit="scientific-star-chart.xml, scientific-star-chart.preferences">
-						<img class="d-block w-100" src="scientific-star-chartCRP.png" alt="Scientific star chart">
 						<div class="carousel-caption d-none d-md-block">
 							<h3>Scientific star chart</h3>
 						</div>
+						<img class="d-block w-100" src="scientific-star-chart.png" alt="Scientific star chart">
 					</div>
 					<div class="carousel-item" data-view="artistic-star-chart.pdf" data-info="ccInfoArt" data-edit="artistic-star-chart.xml, artistic-star-chart.preferences">
-						<img class="d-block w-100" src="artistic-star-chartCRP.png" alt="Artistic star chart">
 						<div class="carousel-caption d-none d-md-block">
 							<h3>Artistic star chart</h3>
 						</div>
+						<img class="d-block w-100" src="artistic-star-chart.png" alt="Artistic star chart">
 					</div>
 					<div class="carousel-item" data-view="artistic-star-chart--toppage.pdf" data-info="ccInfoArt" data-edit="artistic-star-chart--toppage.xml, artistic-star-chart--toppage.preferences">
-						<img class="d-block w-100" src="artistic-star-chart--toppageCRP.png" alt="Only the chart from artistic star chart">
 						<div class="carousel-caption d-none d-md-block">
 							<h3>Chart extracted from Artistic star chart</h3>
 						</div>
+						<img class="d-block w-100" src="artistic-star-chart--toppage.png" alt="Only the chart from artistic star chart">
 					</div>
 					<div class="carousel-item" data-view="artistic-star-chart--artwork.pdf" data-info="ccInfoArt" data-edit="artistic-star-chart--artwork.xml, artistic-star-chart--artwork.preferences">
-						<img class="d-block w-100" src="artistic-star-chart--artworkCRP.png" alt="Background graphics from artistic star chart">
 						<div class="carousel-caption d-none d-md-block">
 							<h3>Artwork extracted from Artistic star chart</h3>
 						</div>
+						<img class="d-block w-100" src="artistic-star-chart--artwork.png" alt="Background graphics from artistic star chart">
 					</div>
 				</div>
 			</div>
@@ -142,7 +142,7 @@
 				</div>
 				<div class="col-lg-5 text-center d-none d-lg-block">
 					<figure>
-						<a href="scientific-star-chartCOL.png"><img class="info-img mx-auto" src="scientific-star-chartCOL.png" alt="Scientific star chart"></a>
+						<a href="scientific-star-chart.png"><img class="info-img mx-auto" src="scientific-star-chart.png" alt="Scientific star chart"></a>
 						<figcaption class="figure-caption">Scientific star chart image (click to enlarge)</figcaption>
 					</figure>
 				</div>
@@ -166,7 +166,7 @@
 				</div>
 				<div class="col-lg-5 order-lg-1 text-center d-none d-lg-block">
 					<figure>
-						<a href="artistic-star-chartCOL.png"><img class="info-img mx-auto" src="artistic-star-chartCOL.png" alt="Artistic star chart"></a>
+						<a href="artistic-star-chart.png"><img class="info-img mx-auto" src="artistic-star-chart.png" alt="Artistic star chart"></a>
 						<figcaption class="figure-caption">Artistic star chart image (click to enlarge)</figcaption>
 					</figure>
 				</div>
@@ -194,7 +194,7 @@
 				</div>
 				<div class="col-lg-5 text-center d-none d-lg-block">
 					<figure>
-						<a href="general-features-selectionCOL.png"><img class="info-img mx-auto" src="general-features-selectionCOL.png" alt="General features selection"></a>
+						<a href="general-features-selection.png"><img class="info-img mx-auto" src="general-features-selection.png" alt="General features selection"></a>
 						<figcaption class="figure-caption">General features selection image (click to enlarge)</figcaption>
 					</figure>
 				</div>
