Improve responsive behaviour and styles

--- a/w3/index.html
+++ b/w3/index.html
@@ -18,7 +18,7 @@
 	<div id="ccHome">
 		<!-- begin navigation -->
 		<nav class="navbar navbar-expand-xl fixed-top">
-		<div class="container">
+		<div class="container-fluid">
 			<a class="navbar-brand" href="#ccHome"><img src="brand.png" alt="Charta Caeli"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ccNavbar">
 				<span class="custom-toggler-icon"><i class="fas fa-bars"></i></span>
@@ -49,13 +49,13 @@
 		</nav>
 		<!-- end navigation -->
 		<!-- begin caption -->
-		<div class="caption container-fluid">
+		<div class="caption container">
 			<div class="row h-100">
 				<div class="caption-intro col-12 h-50 ">
-					<h2>it's all about stars...</h2>
+					<h1>it's all about stars...</h1>
 				</div>
 				<div class="caption-outro col-12 align-self-end text-center">
-					<a class="btn btn-lg btn-outline-primary" role="button" href="#ccGallery"><h2>...map 'em!</h2></a>
+					<a class="btn btn-lg btn-outline-primary" role="button" href="#ccGallery"><h1>...map 'em!</h1></a>
 				</div>
 			</div>
 		</div>
@@ -285,8 +285,7 @@
 			<div class="row">
 				<div class="col text-center">
 					<img class="img-fluid d-none d-md-inline" src="brand.png" als="Charta Caeli">
-					<h3>Stay tuned and share...</h3>
-					<p>
+					<p>Stay tuned and share...
 					<br><span class="contact-social">
 						<a href="#"><i class="fab fa-facebook"></i></a>
 						<a href="#"><i class="fab fa-twitter"></i></a>
